[package]
name = "code-crack-game"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
dotenvy = "0.15.7"
